--- a/00-Brusselator/Serial-Code.ipynb
+++ b/00-Brusselator/Serial-Code.ipynb
@@ -63,7 +63,7 @@
     "### Time discretization\n",
     "The most popular method for IVP is the 4<sup>th</sup> Runge-Kutta method (RK41). Given an IVP problem, \n",
     "$$\n",
-    "\\frac{du}{dt} = f(u,t)\\;,\n",
+    "\\frac{dy}{dt} = f(y,t)\\;,\n",
     "$$\n",
     "starting at time $t=t_0$ and resolved with a time step $\\Delta t$,\n",
     "the RK41 integration from $u^{(n)}=y(t_n)$ to $u^{(n+1)}=y(t_{n+1})$ ($t_n = t_0+n\\Delta t$) writes\n",
@@ -131,15 +131,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "L = 200.\n",
-    "N = 200\n",
-    "Delta = L/N\n",
-    "x = np.linspace(Delta/2,L-Delta/2,N)\n",
-    "z = np.linspace(Delta/2,L-Delta/2,N)\n",
+    "L = 200. # length of computational domain\n",
+    "N = 200 # Number of computational nodes per direction\n",
+    "Delta = L/N #Size of computational cell\n",
+    "x = np.linspace(Delta/2,L-Delta/2,N) # horizontal location of comp. nodes\n",
+    "z = np.linspace(Delta/2,L-Delta/2,N) # vertical location of comp. nodes\n",
     "X,Z = np.meshgrid(x,z,indexing='ij')\n",
     "a =4.5\n",
     "b = 7.5\n",
-    "i_u = 0; i_v = 1\n",
+    "i_u = 0; i_v = 1 \n",
     "D = np.array([2.,16.])\n",
     "D_Deltasq = D/Delta**2\n",
     "dt = 0.01 #time step\n",
